cluster/kubernetes/apps/rook-ceph/rook-ceph/ingress/ceph-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
  labels:
    route-label: external-dns-internal
  annotations:
    gatus.home-operations.com/enabled: 'true'
spec:
  hostnames:
    - ceph.local.cjsolsen.com
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: ceph-dashboard
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8080
